# Glyph

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_RAILWAY.md  DEPLOYMENT_RENDER.md  README.md  SECURITY.md  docker-compose.yml  glyph_redesign_mockup.html  gsoc_2026_proposal_anik.docx  package-lock.json  package.json  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/ollama-code-review/: README.md  action.yml
.github/workflows/: ci.yml  llm-code-review.yml  ollama_review.yml
.railway/: railway.ts
backend/: Cargo.toml  Dockerfile  check_output.txt
backend/migrations/: 202603150000_initial_schema.sql
backend/src/: auth.rs  compiler.rs  main.rs  models.rs  projects.rs  state.rs
desktop/: package.json
desktop/src-tauri/: tauri.conf.json
docker/: Dockerfile  worker.sh
docs/: api.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  vercel.json
frontend/src/: App.svelte  app.css  middleware.ts
frontend/src/__tests__/: Editor.test.tsx  components.test.tsx
frontend/src/app/: globals.css  landing.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: dashboard.css  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/projects/[projectId]/: editor.css  page.tsx
frontend/src/app/projects/share/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/components/: ActivityBar.tsx  Editor.tsx  EditorTabs.tsx  LatexHtmlPreview.tsx  PaneHeader.tsx  PdfViewer.tsx  ShareModal.tsx  Sidebar.tsx  SidebarNew.tsx  StatusBar.tsx  Titlebar.tsx  UserDropdown.tsx
frontend/src/lib/: Editor.svelte  api.ts  cdnUrls.ts  compile.ts  errorLogger.ts
frontend/src/types/: latex.d.ts
scripts/: dev.sh
server/: .gitignore  Dockerfile  Dockerfile.worker  package-lock.json  package.json  test_compilation.cjs
server/src/: compileWorker.ts  index.ts
server/src/__tests__/: app.test.ts  project.test.ts  worker.test.ts  yjs.test.ts
server/src/config/: db.ts  env.ts  yjsServer.ts
server/src/controllers/: authController.ts  projectController.ts
server/src/routes/: authRoutes.ts  projectRoutes.ts
