[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25", features = ["tokio-comp"] }
yrs = "0.18"
yrs-axum = "0.8"
dashmap = "5.5"
futures-util = "0.3"
bollard = "0.16"
jsonwebtoken = "9.2"
oauth2 = "4.4"
aws-sdk-s3 = "1.17"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
bytes = "1"
tar = "0.4"
reqwest = { version = "0.11", features = ["json"] }
bcrypt = "0.19.0"
tower-http = { version = "0.5", features = ["cors"] }
